@@ -2,6 +2,10 @@
 # Add your name and the date, as well as an explanation for the mask
 # Make sure the atoms you add are valid!
 
+# Dominik Kapusta <ayoy@gentoo.org> (21 Nov 2009)
+# Masking release candidate.
+=dev-util/qt-creator-1.3.0_rc1
+
 # Markos Chandras <hwoarang@gentoo.org> (20 Nov 2009)
 # Snapshots are not for everybody :)
 =dev-python/PyQt4-4.7_pre*
@@ -15,11 +19,6 @@
 >=dev-python/apiextractor-0.3.1
 >=dev-python/boostpythongenerator-0.3.2a_p1
 >=dev-python/generatorrunner-0.3.2a_p1
-
-# Markos Chandras <hwoarang@gentoo.org> (14 Oct 2009)
-# Masking beta release. Unmask it when you are sure that it
-# works fine
-=dev-util/qt-creator-1.3.0_beta
 
 # Markos Chandras <hwoarang@gentoo.org> (15 Aug 2009)
 # Upstream SVN repo seems dead
