@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*qt-creator-1.3.0_rc1 (21 Nov 2009)
+
+  21 Nov 2009; Dominik Kapusta <ayoy@gentoo.org>
+  -qt-creator-1.3.0_beta.ebuild, +qt-creator-1.3.0_rc1.ebuild, metadata.xml:
+  Adding release candidate, removing beta
+
   02 Nov 2009; Markos Chandras <hwoarang@gentoo.org>
   qt-creator-1.3.0_beta.ebuild, -files/docs_gen.patch:
   Remove obsolete patch
